# playscript-binding

./: .gitignore  ICSharpCode.NRefactory.PlayScript.csproj.patch  PlayScriptBinding.csproj.patch  PlayScriptBinding.sln  README.md  addin-project.xml  rebuild-binding.sh  set-md-version.sh  update-binding.sh  update-dependencies.sh  update-project-patches.sh
ICSharpCode.NRefactory.PlayScript/: CSharpProjectContent.cs  ICSharpCode.NRefactory.PlayScript.csproj  ICSharpCode.NRefactory.PlayScript.csproj.orig  Makefile.am  NameLookupMode.cs  QueryExpressionExpander.cs
ICSharpCode.NRefactory.PlayScript/Analysis/: ControlFlow.cs  DefiniteAssignmentAnalysis.cs  ReachabilityAnalysis.cs  SemanticHighlightingVisitor.cs
ICSharpCode.NRefactory.PlayScript/Ast/: AstNode.cs  AstNodeCollection.cs  AstType.cs  CSharpModifierToken.cs  CSharpTokenNode.cs  CSharpUtil.cs  ComposedType.cs  DepthFirstAstVisitor.cs  DocumentationReference.cs  ErrorNode.cs  IAstVisitor.cs  Identifier.cs  IdentifierExpressionBackreference.cs  MemberType.cs  ObservableAstVisitor.cs  PrimitiveType.cs  Roles.cs  SimpleType.cs  SyntaxTree.cs  old_ObservableAstVisitor.cs
ICSharpCode.NRefactory.PlayScript/Completion/: CSharpCompletionEngine.cs  CSharpCompletionEngineBase.cs  CSharpParameterCompletionEngine.cs  CompletionDataWrapper.cs  ICompletionContextProvider.cs  ICompletionDataFactory.cs  IParameterCompletionDataFactory.cs
ICSharpCode.NRefactory.PlayScript/Formatter/: AstFormattingVisitor.cs  CSharpFormatter.cs  CSharpFormattingOptions.cs  CSharpIndentEngine.cs  FormattingChanges.cs  FormattingOptionsFactory.cs  (+7 more)
(+664 files in other folders)
